--- a/GameStore/store/templates/store/reg.html
+++ b/GameStore/store/templates/store/reg.html
@@ -11,9 +11,12 @@
 <body>
   <div class="login-container">
     <a href="{% url 'index' %}"><img src="{% static 'img/logo/logo.png' %}" alt="Logo" class="logo" /></a>
-    <h2>Войти</h2>
-    <form id="login-form" method="post" novalidate autocomplete="off">
+    <h2>Зарегистрироваться</h2>
+    <form method="POST" id="login-form" novalidate autocomplete="off">
       {% csrf_token %}
+      {% if error %}
+        <p style="color:red;">{{ error }}</p>
+      {% endif %}
 
       {% if messages %}
       <ul class="messages">
@@ -23,16 +26,29 @@
       </ul>
       {% endif %}
 
+
+      <div class="input-block">
+        <label for="username">Имя пользователя</label>
+        <input type="text" name="username" id="username" required autocomplete="off" />
+      </div>
       <div class="input-block">
         <label for="email">Адрес электронной почты</label>
-        <input type="email" id="email" name="email" required autocomplete="new-email" />
+        <input type="text" name="email" id="email" required autocomplete="off" />
+        <span class="error-text">Обязательно</span>
+      </div>
+      <div class="input-block">
+        <label for="birthdate">Дата рождения</label>
+        <input type="date" name="birthdate" id="birthdate" required autocomplete="off" />
       </div>
       <div class="input-block">
         <label for="password">Пароль</label>
-        <input type="password" id="password" name="password" required autocomplete="new-password" />
+        <input type="password" name="password" id="password" required autocomplete="off" />
       </div>
-      <a href="#" class="forgot-password">Забыли пароль?</a>
-      <button type="submit" id="submit-btn">Войти</button>
+      <div class="input-block">
+        <label for="password2">Повторите пароль</label>
+        <input type="password" name="password2" id="password2" required autocomplete="off" />
+      </div>
+      <button type="submit" id="submit-btn">Зарегистрироваться</button>
     </form>
     <div class="divider"><span>или войти с</span></div>
     <div class="socials">
@@ -41,8 +57,6 @@
       <button class="social google"></button>
       <button class="social apple"></button>
     </div>
-
-    <a href="{% url 'reg' %}" class="New-acc">Создать учетную запись</a>
 
     <a href="" class="policy">Политика конфиденциальности</a>
   </div>
