--- a/GameStore/static/css/login.css
+++ b/GameStore/static/css/login.css
@@ -63,6 +63,41 @@ input:invalid {
   box-shadow: none;
 }
 
+input[type="date"] {
+  background-color: #1e1e22;
+  color: white;
+  border: 1px solid #444;
+  border-radius: 12px;
+  padding: 15px;
+  font-size: 15px;
+  transition: border 0.2s ease;
+  appearance: none;
+}
+
+input[type="date"]:focus {
+  outline: none;
+  border-color: #666;
+  background-color: #1e1e22;
+}
+
+input[type="date"]:valid,
+input[type="date"]:invalid {
+  background-color: #1e1e22;
+  box-shadow: none;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  background-color: #2f2f33;
+  border-radius: 10px;
+  padding: 8px;
+  cursor: pointer;
+}
+
+input[type="date"]:focus::-webkit-calendar-picker-indicator {
+  background-color: #007bff;
+}
+
+
 .error-text {
   font-size: 12px;
   color: red;
@@ -147,24 +182,29 @@ button[type="submit"].active {
 }
 
 .checkbox-policy {
-  display: flex;
-  align-items: center;
   font-size: 14px;
   color: #ccc;
   margin-top: 10px;
+}
+
+.checkbox-policy label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 .checkbox-policy input[type="checkbox"] {
   appearance: none;
   width: 18px;
   height: 18px;
+  display: inline-block;
+  vertical-align: middle;
+  flex-shrink: 0;
   border: 2px solid #555;
   border-radius: 4px;
   background-color: transparent;
-  margin-right: 10px;
-  position: relative;
   cursor: pointer;
-  transition: all 0.2s ease;
+  position: relative;
 }
 
 .checkbox-policy input[type="checkbox"]:checked {
@@ -175,9 +215,14 @@ button[type="submit"].active {
 .checkbox-policy input[type="checkbox"]:checked::after {
   content: '✓';
   position: absolute;
-  top: 1px;
-  left: 4px;
-  font-size: 14px;
+  top: 0;
+  left: 0;
+  font-size: 16px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: white;
 }
 
