--- a/GameStore/store/templates/store/login.html
+++ b/GameStore/store/templates/store/login.html
@@ -1,60 +1,51 @@
+{% extends 'store/base_auth.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>{{ title }}</title>
-  <link rel="stylesheet" href="{% static 'css/login.css' %}" />
-  <link rel="icon" href="{% static 'img/logo/logo.ico' %}" type="image/x-icon" />
-</head>
-<body>
-  <div class="login-container">
-    <a href="{% url 'index' %}"><img src="{% static 'img/logo/logo.png' %}" alt="Logo" class="logo" /></a>
-    <h2>Войти</h2>
-    <form id="login-form" method="post" autocomplete="off">
-      {% csrf_token %}
+{% block title %}{{ title }}{% endblock %}
 
-      {% if messages %}
-      <ul class="messages">
-        {% for message in messages %}
-        <li class="{{ message.tags }}">{{ message }}</li>
-        {% endfor %}
-      </ul>
-      {% endif %}
+{% block content %}
+<h2>Войти</h2>
+<form id="login-form" method="post" autocomplete="off">
+  {% csrf_token %}
 
-      <div class="input-block">
-        <label for="email">Адрес электронной почты</label>
-        <input type="email" id="email" name="email" required autocomplete="username" />
-      </div>
-      <div class="input-block">
-        <label for="password">Пароль</label>
-        <input type="password" id="password" name="password" required autocomplete="current-password" />
-      </div>
-      <a href="#" class="forgot-password">Забыли пароль?</a>
-      <button type="submit" id="submit-btn">Войти</button>
-    </form>
-    <div class="divider"><span>или войти с</span></div>
-    <div class="socials">
-      <button class="social steam"></button>
-      <button class="social facebook"></button>
-      <button class="social google"></button>
-      <button class="social apple"></button>
-    </div>
+  {% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+    <li class="{{ message.tags }}">{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}
 
-    <a href="{% url 'reg' %}" class="New-acc">Создать учетную запись</a>
-
-    <a href="#" class="policy">Политика конфиденциальности</a>
+  <div class="input-block">
+    <label for="email">Адрес электронной почты</label>
+    <input type="email" id="email" name="email" required autocomplete="username" />
   </div>
+  <div class="input-block">
+    <label for="password">Пароль</label>
+    <input type="password" id="password" name="password" required autocomplete="current-password" />
+  </div>
+  <a href="#" class="forgot-password">Забыли пароль?</a>
+  <button type="submit" id="submit-btn">Войти</button>
+</form>
 
-  <script>
-    // Убираем автозаполнение для всех полей ввода
-    document.querySelectorAll('input').forEach(function(input) {
-      input.setAttribute('autocomplete', 'off');
-    });
-  </script>
+<div class="divider"><span>или войти с</span></div>
+<div class="socials">
+  <button class="social steam"></button>
+  <button class="social facebook"></button>
+  <button class="social google"></button>
+  <button class="social apple"></button>
+</div>
+{% endblock %}
 
-  <script src="{% static 'js/script.js' %}"></script>
-</body>
-</html>
+{% block extra_links %}
+<a href="{% url 'reg' %}" class="New-acc">Создать учетную запись</a>
+<a href="#" class="policy">Политика конфиденциальности</a>
+{% endblock %}
+
+{% block extra_js %}
+<script>
+  document.querySelectorAll('input').forEach(function(input) {
+    input.setAttribute('autocomplete', 'off');
+  });
+</script>
+{% endblock %}
