--- a/GameStore/store/templates/store/Index.html
+++ b/GameStore/store/templates/store/Index.html
@@ -1,15 +1,12 @@
 {% load static %}
 
-
-
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ title }}</title>
-  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/style1.css' %}" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="icon" href="{% static 'img/logo/logo.ico' %}" type="image/x-icon" />
 </head>
@@ -28,17 +25,8 @@
       </div>
       <span class="store-name">STORE</span>
     </div>
-
     <nav class="header-nav">
       <a href="#">Поддержка</a>
-      <div class="dropdown">
-        <a href="#">Публикация ▾</a>
-        <div class="dropdown-content">
-          <a href="#">Unreal Engine</a>
-          <a href="#">Twinmotion</a>
-          <a href="#">MetaHuman</a>
-        </div>
-      </div>
     </nav>
 
     <div class="header-right">
@@ -61,13 +49,14 @@
   <!-- Поисковая строка и навигация -->
   <div class="search-section">
     <div class="search-bar">
-      <input type="text" placeholder="Искать в магазине" />
+      <input id="searchInput" type="text" placeholder="Искать в магазине" />
       <span class="search-icon">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="11" cy="11" r="8" stroke="#aaa" stroke-width="2" />
           <line x1="16.5" y1="16.5" x2="22" y2="22" stroke="#aaa" stroke-width="2" stroke-linecap="round" />
         </svg>
       </span>
+      <ul id="searchResults" class="search-results"></ul>
     </div>
 
     <nav class="page-nav">
@@ -76,5 +65,32 @@
       <a href="#">Новости</a>
     </nav>
   </div>
+
+  <!-- Основной баннер и боковая панель -->
+  <div class="main-container">
+    <div class="main-banner" id="mainBanner">
+      <img id="bannerImage" src="" alt="Banner" />
+      <div class="banner-text">
+        <h1 id="bannerTitle">Загрузка...</h1>
+        <p id="bannerDescription">Ожидайте...</p>
+        <button class="banner-btn">Играть бесплатно</button>
+      </div>
+      <div class="banner-progress"></div>
+    </div>
+
+    <div class="sidebar" id="randomGames">
+      <span style="color:#aaa;">Загрузка игр...</span>
+    </div>
+  </div>
+
+  <!-- Открыть новое -->
+  <div class="discover-more">
+    <a href="#" style="text-decoration: none;">
+      <h2>Откройте для себя что-то новое <span>›</span></h2>
+    </a>
+  </div>
+
+  <script src="{% static 'js/bannerslist.js' %}"></script>
+
 </body>
 </html>
