--- a/GameStore/store/templates/store/login.html
+++ b/GameStore/store/templates/store/login.html
@@ -56,5 +56,5 @@
 
 
 {% block extra_js %}
- <script src="{% static 'js/script.js' %}"></script>
+ <script src="{% static 'js/log-script.js' %}"></script>
 {% endblock %}
