--- a/GameStore/store/templates/store/games-list.html
+++ b/GameStore/store/templates/store/games-list.html
@@ -47,7 +47,11 @@
     </div>
   </header>
   <!-- ============================= -->
-
+  {% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-warning">{{ message }}</div>
+  {% endfor %}
+{% endif %}
   <!-- ========== SEARCH & NAV ========== -->
   <div class="search-section">
     <div class="search-bar">
@@ -114,6 +118,26 @@
       {% endfor %}
     </section>
 
+  </div>
+
+  <div class="pagination">
+    {% if games.has_previous %}
+      <a href="?page=1{% if sort_option %}&sort={{ sort_option }}{% endif %}{% for genre_id in selected_genres %}&genres={{ genre_id }}{% endfor %}" class="page-link">«</a>
+      <a href="?page={{ games.previous_page_number }}{% if sort_option %}&sort={{ sort_option }}{% endif %}{% for genre_id in selected_genres %}&genres={{ genre_id }}{% endfor %}" class="page-link">‹</a>
+    {% endif %}
+  
+    {% for page_num in games.paginator.page_range %}
+      {% if games.number == page_num %}
+        <span class="page-link active">{{ page_num }}</span>
+      {% elif page_num >= games.number|add:'-2' and page_num <= games.number|add:'2' %}
+        <a href="?page={{ page_num }}{% if sort_option %}&sort={{ sort_option }}{% endif %}{% for genre_id in selected_genres %}&genres={{ genre_id }}{% endfor %}" class="page-link">{{ page_num }}</a>
+      {% endif %}
+    {% endfor %}
+  
+    {% if games.has_next %}
+      <a href="?page={{ games.next_page_number }}{% if sort_option %}&sort={{ sort_option }}{% endif %}{% for genre_id in selected_genres %}&genres={{ genre_id }}{% endfor %}" class="page-link">›</a>
+      <a href="?page={{ games.paginator.num_pages }}{% if sort_option %}&sort={{ sort_option }}{% endif %}{% for genre_id in selected_genres %}&genres={{ genre_id }}{% endfor %}" class="page-link">»</a>
+    {% endif %}
   </div>
 </body>
 </html>
